--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,20 +2,26 @@
     <div class="row">
         <div class="col-md-4 push-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>SB Admin BS4 Angular4</h1>
-            <form role="form">
+            <h1>Donde estaciono? - WEB</h1>
+            <form role="form" name="login-form" #f="ngForm" >
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="text" class="form-control input-underline input-lg" placeholder="Email" name="form-email"
+                               id="form-email" [(ngModel)]="usuario.email" #email="ngModel" required>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input type="password" class="form-control input-underline input-lg" placeholder="Password" name="form-password"
+                                id="form-password" [(ngModel)]="usuario.password" #password="ngModel" required>
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']" (click)="onLoggedin()"> Log in </a>
+                <a class="btn rounded-btn" (click)="onLoggedin()"> Ingresar </a>
                 &nbsp;
-                <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
+                <a class="btn rounded-btn" [routerLink]="['/signup']">Registrarse</a>
+
+                <div class="text-center" *ngIf="loading">
+                    <i class="fa fa-spinner fa-spin fa-3x fa-fw" id="my-spinner"></i>
+                </div>
             </form>
         </div>
     </div>
