--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -87,4 +87,8 @@ $topnav-background-color: #222;
                 border-radius: 50%;
         border: 2px solid #FFF;
     }
+
+    #my-spinner {
+        margin-top: 10%;
+    }
 }
