--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,26 +2,34 @@
     <div class="row">
         <div class="col-md-4 push-md-4">
             <img class="user-avatar" src="assets/images/logo.png" width="150px" />
-            <h1>SB Admin BS4 Angular4</h1>
-            <form role="form">
+            <h1>Donde estaciono? - WEB</h1>
+            <form role="form" name="signup-form" #f="ngForm">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Full Name">
+                        <input type="text" class="form-control input-underline input-lg" placeholder="Nombre"
+                               name="form-firstName" id="form-firstName" [(ngModel)]="usuario.firstName" #firstName="ngModel" required>
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="text" class="form-control input-underline input-lg" placeholder="Apellido"
+                               name="form-lastName" id="form-lastName" [(ngModel)]="usuario.lastName" #lastName="ngModel" required>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input type="text" class="form-control input-underline input-lg" placeholder="Email"
+                               name="form-email" id="form-email" [(ngModel)]="usuario.email" #email="ngModel" required>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="password" class="form-control input-underline input-lg" placeholder="Contraseña"
+                               name="form-password" id="form-password" [(ngModel)]="usuario.password" #password="ngModel" required>
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Repeat Password">
+                        <input type="password" class="form-control input-underline input-lg" placeholder="Repetir Contraseña" required>
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Register </a>&nbsp;
-                <a class="btn rounded-btn" [routerLink]="['/login']"> Log in </a>
+                <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Registrarse </a>&nbsp;
+                <a class="btn rounded-btn" [routerLink]="['/login']"> Ingresar </a>
             </form>
         </div>
     </div>
