--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -91,4 +91,8 @@ $topnav-background-color: #222;
     #my-spinner {
         margin-top: 10%;
     }
+
+    .has-danger{
+        color: crimson;
+    }
 }
