--- a/src/app/shared/modules/stat/stat.component.html
+++ b/src/app/shared/modules/stat/stat.component.html
@@ -1,10 +1,13 @@
 <div class="card card-inverse {{bgClass}}">
     <div class="card-header">
         <div class="row">
-            <div class="col col-xs-3">
+            <div class="col col-xs-4">
                 <i class="fa {{icon}} fa-5x"></i>
             </div>
-            <div class="col col-xs-9 text-right">
+            <div class="col col-xs-5">
+                <i class="fa {{icon2}} fa-5x"></i>
+            </div>
+            <div class="col col-xs-3 text-right">
                 <div class="d-block huge">{{count}}</div>
                 <div class="d-block">{{label}}</div>
             </div>
