--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,49 +1,127 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
+
     <ul class="list-group">
-        <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'dashboard' | translate }}
-        </a>
-        <a [routerLink]="['/charts']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;{{ 'charts' | translate }}
-        </a>
-        <a [routerLink]="['/tables']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-table"></i>&nbsp;{{ 'tables' | translate }}
-        </a>
-        <a [routerLink]="['/forms']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-edit"></i>&nbsp;{{ 'forms' | translate }}
-        </a>
-        <a [routerLink]="['/bs-element']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-desktop"></i>&nbsp;{{ 'boostrapElement' | translate }}
-        </a>
-        <a [routerLink]="['/grid']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-wrench"></i>&nbsp;{{ 'boostrapGrid' | translate }}
-        </a>
-        <a [routerLink]="['/components']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-th-list"></i>&nbsp;{{ 'component' | translate }}
-        </a>
+
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
-                <span><i class="fa fa-plus"></i>&nbsp; {{ 'menu' | translate }}</span>
+                <span><i class="fa fa-plus"></i>&nbsp; {{ 'A BORRAR' }}</span>
             </a>
             <li class="nested" [class.expand]="showMenu === 'pages'">
                 <ul class="submenu">
                     <li>
-                        <a href="javascript:void(0)"><span>{{ 'submenu' | translate }}</span></a>
+                        <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'dashboard' | translate }}
+                        </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"><span>{{ 'submenu' | translate }}</span></a>
+                        <a [routerLink]="['/charts']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;{{ 'charts' | translate }}
+                        </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"><span>{{ 'submenu' | translate }}</span></a>
+                        <a [routerLink]="['/tables']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-fw fa-table"></i>&nbsp;{{ 'tables' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a [routerLink]="['/forms']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-fw fa-edit"></i>&nbsp;{{ 'forms' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a [routerLink]="['/bs-element']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-fw fa-desktop"></i>&nbsp;{{ 'boostrapElement' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a [routerLink]="['/grid']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-fw fa-wrench"></i>&nbsp;{{ 'boostrapGrid' | translate }}
+                        </a>
                     </li>
                 </ul>
             </li>
         </div>
-        <a [routerLink]="['/blank-page']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-file-o"></i>&nbsp;{{ 'blankpage' | translate }}
+
+    </ul>
+
+    <!-- lo anterior a esto se tiene que borrar en un futuro, es solo para tener a mano los componentes -->
+
+    <ul class="list-group">
+        <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-th-list"></i>&nbsp;{{ 'Dashboard' | translate }}
         </a>
-        <a class="list-group-item more-themes" href="http://www.strapui.com/" >
-            {{ 'moretheme' | translate }}
+        <div class="nested-menu">
+            <a class="list-group-item" (click)="addExpandClass('ingresos')">
+                <span><i class="fa fa-plus"></i>&nbsp; {{ 'Ingresos/Egresos' | translate }}</span>
+            </a>
+            <li class="nested" [class.expand]="showMenu === 'ingresos'">
+                <ul class="submenu">
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-car"></i>&nbsp;{{ 'Ingreso vehículos' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-sign-out"></i>&nbsp;{{ 'Egreso vehículos' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-bell"></i>&nbsp;{{ 'Emitir notificacion' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-bars"></i>&nbsp;{{ 'Historial' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </div>
+        <div class="nested-menu">
+            <a class="list-group-item" (click)="addExpandClass('reservas')">
+                <span><i class="fa fa-plus"></i>&nbsp; {{ 'Reservas' | translate }}</span>
+            </a>
+            <li class="nested" [class.expand]="showMenu === 'reservas'">
+                <ul class="submenu">
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-money"></i>&nbsp;{{ 'Reservas activas' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-bars"></i>&nbsp;{{ 'Historial' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </div>
+        <div class="nested-menu">
+            <a class="list-group-item" (click)="addExpandClass('estadisticas')">
+                <span><i class="fa fa-plus"></i>&nbsp; {{ 'Estadísticas' | translate }}</span>
+            </a>
+            <li class="nested" [class.expand]="showMenu === 'estadisticas'">
+                <ul class="submenu">
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-pie-chart"></i>&nbsp;{{ 'Reporte 1' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <i class="fa fa-line-chart"></i>&nbsp;{{ 'Reporte 2' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </div>
+        <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-comments"></i>&nbsp;{{ 'Social' | translate }}
+        </a>
+        <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-cogs"></i>&nbsp;{{ 'Configuración' | translate }}
         </a>
     </ul>
 </nav>
