Fix estetico dashboard

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -23,10 +23,10 @@
             <app-stat [bgClass]="'card-danger'" [icon]="'fa-car'" [icon2]="'fa-sign-out'" [data]="'SALIDA VEHÍCULO'"></app-stat>
         </a>
         <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
-            <app-stat [bgClass]="'card-primary'" [icon]="'fa-money'" [count]="4" [label]="'Nuevas reservas!'" [data]="'VER RESERVAS'" ></app-stat>
+            <app-stat [bgClass]="'card-primary'" [icon]="'fa-money'" [count]="4" [label]="'nuevas reservas!'" [data]="'VER RESERVAS'" ></app-stat>
         </a>
         <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
-            <app-stat [bgClass]="'card-info'" [icon]="'fa-bar-chart'" [data]="'ESTADÍSTICAS'" ></app-stat>
+            <app-stat [bgClass]="'card-info'" [icon]="'fa-bar-chart'" [count]="21" [label]="'vehículos ingresados'" [data]="'ESTADÍSTICAS'" ></app-stat>
         </a>
     </div>
     <hr />
