--- a/src/app/shared/modules/stat/stat.component.html
+++ b/src/app/shared/modules/stat/stat.component.html
@@ -4,12 +4,12 @@
             <div class="col col-xs-4">
                 <i class="fa {{icon}} fa-5x"></i>
             </div>
-            <div class="col col-xs-5">
+            <div class="col col-xs-4">
                 <i class="fa {{icon2}} fa-5x"></i>
             </div>
-            <div class="col col-xs-3 text-right">
-                <div class="d-block huge">{{count}}</div>
-                <div class="d-block">{{label}}</div>
+            <div class="col col-xs-4 text-right">
+                <div class="d-block huge"></div>
+                <div class="d-block">{{count}} {{label}}</div>
             </div>
         </div>
     </div>
