--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
@@ -1,3 +1,28 @@
-<p>
-  ingreso-vehiculos works!
-</p>
+<app-page-header [heading]="'Ingresar un Vehículo'" [icon]="'fa-car'"></app-page-header>
+<form class="form-horizontal" #f="ngForm">
+    <div class="modal-body">
+        <div class="form-group row">
+            <label for="ingreso-patente" class="col-sm-3 required control-label text-center">Patente</label>
+            <div class="col-sm-6"
+                 [ngClass]="{'has-danger': !patente.valid && (!patente.pristine || patente.touched || submitted),
+                'has-success': patente.valid}">
+                <input type="text" class="form-control has-feedback" id="ingreso-patente" name="patente" (ngModel)="patente" #patente="ngModel" required [maxLength]="191" placeholder="Patente">
+                <span *ngIf="patente.valid" class="form-control-feedback"></span>
+                <span *ngIf="patente.errors !== null && (!patente.pristine || patente.touched || submitted)" class="form-control-feedback"></span>
+                <div *ngIf="!patente.valid && (!patente.pristine || patente.touched || submitted)" class="has-danger form-control-feedback"> *Ingrese la patente</div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+
+        </div>
+
+        <div class="form-group row">
+
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="submit" class="btn btn-primary">Aceptar</button>
+    </div>
+</form>
