Settings page, ParqueEndpoint call, refactor views

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -16,10 +16,10 @@
     <hr>
     <div class="row">
         <!-- TODO cambiar links /login a donde corresponda -->
-        <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
+        <a class="col-xl-3 col-lg-6" [routerLink]="['/ingreso-egreso/ingreso']">
             <app-stat [bgClass]="'card-success'" [icon2]="'fa-car'" [icon]="'fa-sign-in'" [data]="'INGRESO VEHÍCULO'" ></app-stat>
         </a>
-        <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
+        <a class="col-xl-3 col-lg-6" [routerLink]="['/ingreso-egreso/egreso']">
             <app-stat [bgClass]="'card-danger'" [icon]="'fa-car'" [icon2]="'fa-sign-out'" [data]="'SALIDA VEHÍCULO'"></app-stat>
         </a>
         <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
