--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -120,8 +120,8 @@
         <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-comments"></i>&nbsp;{{ 'Social' | translate }}
         </a>
-        <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-cogs"></i>&nbsp;{{ 'Configuración' | translate }}
+        <a [routerLink]="['/settings']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-cogs"></i>&nbsp;{{ 'Ajustes' | translate }}
         </a>
     </ul>
 </nav>
