--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -56,18 +56,18 @@
                         <a href="javascript:void(0)" class="dropdown-item">View All</a>
                     </ul>
                 </li>
-                <li class="nav-item dropdown" ngbDropdown>
-                    <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
-                        <i class="fa fa-language"></i> {{ 'language' | translate }} <b class="caret"></b>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('en')">English</a>
-                        <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('fr')">French</a>
-                        <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('ur')">Urdu</a>
-                        <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('es')">Spanish</a>
-                        <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('fa')">Farsi</a>
-                    </div>
-                </li>
+                <!--<li class="nav-item dropdown" ngbDropdown>-->
+                    <!--<a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>-->
+                        <!--<i class="fa fa-language"></i> {{ 'language' | translate }} <b class="caret"></b>-->
+                    <!--</a>-->
+                    <!--<div class="dropdown-menu dropdown-menu-right">-->
+                        <!--<a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('en')">English</a>-->
+                        <!--<a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('fr')">French</a>-->
+                        <!--<a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('ur')">Urdu</a>-->
+                        <!--<a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('es')">Spanish</a>-->
+                        <!--<a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('fa')">Farsi</a>-->
+                    <!--</div>-->
+                <!--</li>-->
                 <li class="nav-item dropdown" ngbDropdown>
                     <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                         <i class="fa fa-user"></i> John Smith <b class="caret"></b>
