--- a/src/styles/bootstrap/_carousel.scss
+++ b/src/styles/bootstrap/_carousel.scss
@@ -167,9 +167,10 @@
 
 .carousel-caption {
   position: absolute;
-  right: ((100% - $carousel-caption-width) / 2);
+  right: ((100% - $carousel-caption-width) / 1);
   bottom: 20px;
-  left: ((100% - $carousel-caption-width) / 2);
+  left: ((100% - $carousel-caption-width) / 1);
+  background-color: rgba(0,0,0,0.7);
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
