--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div [@routerTransition]>
-    <h2 class="text-muted">Dashboard <small> - Estadísticas generales</small></h2>
+    <h1 class="text-muted">DASHBOARD <small> - Estadísticas generales</small></h1>
     <div class="row">
         <div class="col-md-12">
             <ngb-carousel>
@@ -7,7 +7,6 @@
                     <img class="img-fluid mx-auto d-block" [src]="slider.imagePath" alt="Random first slide" width="100%">
                     <div class="carousel-caption">
                         <h3>{{slider.label}}</h3>
-                        <p>{{slider.text}}</p>
                     </div>
                 </ng-template>
             </ngb-carousel>
