--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -73,9 +73,9 @@
                         <i class="fa fa-user"></i> John Smith <b class="caret"></b>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        <a class="dropdown-item" [routerLink]="['/settings']"><i class="fa fa-fw fa-user"></i> Perfil</a>
                         <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                        <a class="dropdown-item" [routerLink]="['/settings']"><i class="fa fa-fw fa-gear"></i> Ajustes</a>
                         <a class="dropdown-item" [routerLink]="['/login']" (click)="onLoggedout()"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                     </div>
                 </li>
