--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-page" [@routerTransition]>
     <div class="row">
-        <div class="col-md-4 push-md-4">
+        <div class="col-md-4 push-md-4 login-page-content">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
             <h1>Donde estaciono? - WEB</h1>
             <form role="form" name="login-form" #f="ngForm" novalidate>
@@ -18,14 +18,14 @@
                     </div>
 
                     <div class="form-group" [ngClass]="{'has-danger': datosIncorrectos}">
-                        <div *ngIf="datosIncorrectos" class="has-danger">Los datos ingresados son incorrectos</div>
+                        <div *ngIf="datosIncorrectos && email.valid && password.valid" class="has-danger">Los datos ingresados son incorrectos</div>
                     </div>
                 </div>
                 <a class="btn rounded-btn" (click)="onLoggedin()"> Ingresar </a>
                 &nbsp;
                 <a class="btn rounded-btn" [routerLink]="['/signup']">Registrarse</a>
 
-                <div class="text-center" *ngIf="f.valid && this.submitted">
+                <div class="text-center" *ngIf="f.valid && this.submitted && this.loading">
                     <i class="fa fa-spinner fa-spin fa-3x fa-fw" id="my-spinner"></i>
                 </div>
             </form>
