--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,2 +1,8 @@
 // shared css for the login and signup page
 @import "../login/login.component.scss";
+
+.signup-page-content {
+    background-color: rgba(0,0,0,0.7);
+    padding: 2%;
+    border-radius: 10%;
+}
