Fomulario ingreso + Egreso
Falta que el ingreso le pegue a la appi

--- a/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.html
+++ b/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.html
@@ -1,3 +1,19 @@
-<p>
-  historial-ingresos-egresos works!
-</p>
+<table class="table">
+    <thead class="thead-inverse">
+        <tr>
+            <th>#</th>
+            <th>Nombre del Cliente</th>
+            <th>Patente</th>
+            <th>Horas estacionadas</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+
+    </tbody>
+</table>
